pkg/front_end/testcases/inference_new/for_each_invalid_iterable.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

static method test() → dynamic async {
  core::String s;
  for (final dynamic #t1 in let final dynamic #t2 = s in let dynamic _ = null in const core::_ConstantExpressionError::•().{core::_ConstantExpressionError::_throw}(new core::_CompileTimeError::•("pkg/front_end/testcases/inference_new/for_each_invalid_iterable.dart:10:46: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::Iterable<dynamic>'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::Iterable<dynamic>'.\n  for (int x in /*@error=InvalidAssignment*/ s) {}\n                                             ^"))) {
    core::int x = #t1 as{TypeError} core::int;
  }
  await for (final dynamic #t3 in let final dynamic #t4 = s in let dynamic _ = null in const core::_ConstantExpressionError::•().{core::_ConstantExpressionError::_throw}(new core::_CompileTimeError::•("pkg/front_end/testcases/inference_new/for_each_invalid_iterable.dart:11:52: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.async::Stream<dynamic>'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.async::Stream<dynamic>'.\n  await for (int x in /*@error=InvalidAssignment*/ s) {}\n                                                   ^"))) {
    core::int x = #t3 as{TypeError} core::int;
  }
  core::int y;
  for (final dynamic #t5 in let final dynamic #t6 = s in let dynamic _ = null in const core::_ConstantExpressionError::•().{core::_ConstantExpressionError::_throw}(new core::_CompileTimeError::•("pkg/front_end/testcases/inference_new/for_each_invalid_iterable.dart:13:42: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::Iterable<dynamic>'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::Iterable<dynamic>'.\n  for (y in /*@error=InvalidAssignment*/ s) {}\n                                         ^"))) {
    y = #t5 as{TypeError} core::int;
  }
  await for (final dynamic #t7 in let final dynamic #t8 = s in let dynamic _ = null in const core::_ConstantExpressionError::•().{core::_ConstantExpressionError::_throw}(new core::_CompileTimeError::•("pkg/front_end/testcases/inference_new/for_each_invalid_iterable.dart:14:48: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.async::Stream<dynamic>'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.async::Stream<dynamic>'.\n  await for (y in /*@error=InvalidAssignment*/ s) {}\n                                               ^"))) {
    y = #t7 as{TypeError} core::int;
  }
}
static method main() → dynamic {}
